# RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateProjects-vs2021.bat  PKEngine.sln  README.md  Setup.bat  premake5.lua
PK-Editor/: CMakeLists.txt  PKEngineProfile-Runtime.json  imgui.ini
PK-Editor/assets/shaders/: DepthShader.glsl  FloorShader.glsl  MeshShader.glsl  SkyboxShader.glsl  SquareShader.glsl
PK-Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
PK-Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
PKEngine/: CMakeLists.txt  PKEngine.vcxproj  PKEngine.vcxproj.filters
PKEngine/src/: PKEngine.h  pkpch.h
PKEngine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
PKEngine/src/PKEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthoCameraController.cpp  OrthoCameraController.h  Window.h
PKEngine/src/PKEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  Log.h  Timestep.h  Window.h
PKEngine/src/PKEngine/Debug/: Instrumentator.h
PKEngine/src/PKEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
PKEngine/src/PKEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
PKEngine/src/PKEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Mesh.cpp  Mesh.h  OrthoCameraController.cpp  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
PKEngine/src/PKEngine/Scene/: Actor.cpp  Actor.h  Components.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  Scene.cpp  Scene.h
PKEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture3D.cpp  OpenGLTexture3D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
PKEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: PKEngineProfile-Runtime.json  SPK_lt.FBX  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: DefaultShader.glsl  FloorShader.glsl  MeshShader.glsl  SquareShader.glsl  TextureShader.glsl
Sandbox/shaders/: pbr.fs  pbr.vs
Sandbox/src/: SandBox2D.cpp  SandBox2D.h  SandboxApp.cpp
scripts/: GenerateProjects-vs2019.bat  GenerateProjects-vs2022.bat
